added link to writeup

--- a/stage1.ipynb
+++ b/stage1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hello!\n",
+    "The writeup that explains this code is at www.sahilcreates.com/cipher_challenge_1.html . \n",
+    "Check it out!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
